<resources>
    <string name="app_name">ACIM OE</string>
    <string name="text">TEXT</string>
    <string name="workbook">WORKBOOK</string>
    <string name="donation">DONATION</string>
    <string name="notes">NOTES</string>
    <string name="about_organization">ABOUT ORGANIZATION</string>
    <string name="save">SAVE</string>
    <string name="cims_projects">CIMS PROJECTS*</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="message_server_alert">Oops! Something went wrong. Try again later </string>
    <string name="retry_message">Something went wrong please try again.</string>
    <string name="add_note_title">Add Note Title</string>
    <string name="add_note_description">Add Note Description</string>
    <string name="notes_added_successfully">Notes added successfully</string>
    <string name="affirmation_added_successfully">Written affirmation added successfully</string>
    <string name="affirmation_updated_successfully">Written affirmation updated successfully</string>
    <string name="notes_updated_successfully">Notes updated successfully</string>
    <string name="failed_to_add_notes">Failed to add notes.</string>
    <string name="failed_to_add_affirmation">Failed to add affirmation.</string>
    <string name="failed_to_update_affirmation">Failed to update affirmation.</string>
    <string name="failed_to_update_notes">Failed to update notes.</string>
    <string name="view_notes">View/Manage Notes</string>
    <string name="read_storage_permission_denied_message">"Please go to the app Settings and enable access to Storage."</string>
    <string name="storage_permission">Storage Access permission is currently disabled</string>
    <string name="record_audio_permission">Record Audio permission is currently disabled</string>
    <string name="record_audio_permission_denied_message">"Please go to the app Settings and enable access to Record Audio."</string>
    <string name="write_an_affirmation">Write an affirmation</string>
    <string name="manage_affirmations">Manage Affirmations</string>
    <string name="affirmation">Affirmation</string>
    <string name="manage_notes">Manage Notes</string>
    <string name="BookMark">BookMarks</string>
    <string name="setting">Settings</string>
    <string name="manage_reminder">MANAGE REMINDERS</string>
    <string name="search">SEARCH</string>
    <string name="user_guide">USER GUIDE</string>
    <string name="text_notes">TEXT NOTES</string>
    <string name="workbook_notes">WORKBOOK NOTES</string>
    <string name="manual_notes">MANUAL NOTES</string>
    <string name="audio_affirmation">Audio Affirmation</string>
    <string name="edit_reminders">VIEW/EDIT/DELETE REMINDERS</string>
    <string name="delete">Delete</string>
    <string name="alert">Alert</string>
    <string name="alert_caps">ALERT</string>
    <string name="delete_alert_message_audio">Are you sure you want to delete this audio?</string>
    <string name="delete_alert_message_notes">Are you sure you want to delete this notes?</string>
    <string name="delete_alert_message_text_affirmation">Are you sure you want to delete this affirmation?</string>
    <string name="update">Update</string>
    <string name="default_time">00.00 AM</string>
    <string name="schedule_reminder">Schedule Reminder</string>
    <string name="schedule_reminders_text">Schedule Reminders</string>
    <string name="update_reminder">Update Reminder</string>
    <string name="reminder_list">Reminder List</string>
    <string name="affirmation_list">Affirmation  List</string>
    <string name="donations">Donations</string>
    <string name="written_affirmation_list">Written Affirmation List</string>
    <string name="schedule_reminders"><![CDATA[Schedule Reminders >]]></string>
    <string name="schedule_reminder_error_msg">There are no Affirmations. Please write or record an Affirmation and SAVE before scheduling a Reminder.</string>
    <string name="schedule_reminder_lesson_error_msg">There are no Affirmations. Please write or record an Affirmation and SAVE before scheduling a Reminder.</string>
    <string name="record_and_audio_affirmation">Record an Audio Affirmation</string>
    <string name="record_affirmation">Record Affirmation</string>
    <string name="user_guide_section1">\nThis <b>ACIM OE APP</b> is the <b>A Course in Miracles - Original Edition:</b> TEXT, WORKBOOK, and
MANUAL for TEACHERS. The student can READ the Course, LISTEN to the Audio, and WRITE
NOTES in all three books. The student can also WRITE and/or RECORD an AFFIRMATION for
any Lesson, which can then be scheduled as a REMINDER. All NOTES, AFFIRMATIONS, and
REMNDERS can be Managed in SETTINGS.\n
\n•  NOTES can also be Managed in SETTINGS:\n\n MANAGE NOTES:
        All NOTES, AFFIRMATIONS, REMNDERS, and BOOKMARKS can be Managed in SETTINGS.\n\n
    <b>TO PLAY THE AUDIO</b>\n\n
    The ACIM OE APP lets you LISTEN to the entire COURSE.\n
    \n
        \n•To PLAY the AUDIO of any of the three books, PRESS the Play Triangle in the bottom toolbar, which will turn BLACK when it is loading the audio file.\n
    \n
    <b>BOOKMARKS</b>\n
    \n In the ACIM OE APP, you can set a Bookmark to keep your place.
    \n
    \n• On any page, click the WHITE Bookmark icon at the top of the page, which will turn BLACK. A notification will indicate that it has been set.\n
    \n• To go to the Bookmark, open SETTINGS: BOOKMARK and click the Bookmark you want to open.\n
    \n• To remove the Bookmark, click the BLACK Bookmark icon, which will turn WHITE.\n
    \n

\n<b>TAKING NOTES AS YOU READ</b>\n
\nThe <b>ACIM OE APP</b> lets you take Notes as you read. Here is how:\n
\n•  Open to a specific place in the book where you want to save a Note
\n•  Press the screen to Select and Copy the Title of where you are in the book to the CLIPBOARD
\n•  Press the screen to Select and Copy the words you want to note to the CLIPBOARD [if your device cannot hold more than one item on a Clipboard you can only copy/paste once.]
\n•  Touch the <b>View/Manage Notes</b> button near the bottom of the screen.
\n•  Press in "Add Note Title" area and choose the Title from the CLIPBOARD.
\n•  Press in "Add Note Description" and choose the note from the CLIPBOARD
\n•  Or, if you do not want to Copy and Paste, just write your own Title and Note in the Title and Description area.
\n•  Slide the screen up and then touch <b>SAVE</b>
\n•  A list of your Notes appears below the SAVE button.
\n•  You can view, edit, or delete individual Notes with the icons to the right of the list.


        \n<b>CREATING and SCHEDULING AFFIRMATIONS and REMINDERS</b>\n
\nMany ACIM Lessons ask you to repeat your practice more than once a day. The <b>ACIM OE APP</b> lets you
create reminders to repeat on a schedule that you can customize.\n
\nThis feature can be used to send written reminders/affirmations to your phone\'s home screen, or to play
audio reminders/affirmations that you record in your own voice. Here is how:\n
\n<b>WRITTEN AFFIRMATIONS</b>\n
\n•  While reading a Lesson, press on screen to Select and Copy the Title of the Lesson to the CLIPBOARD
\n•  Press on screen to Select and Copy the words you want to Affirm to the CLIPBOARD [if your device cannot hold more than one item on a Clipboard you can only copy/paste once.]
\n•  Touch the microphone icon at the bottom left of the screen.
\n•  Press in the "Write an Affirmation" box and choose both Lesson title and Affirmation from the CLIPBOARD
\n•  Or, if you do not want to Copy and Paste, just write in your own Title and Affirmation
\n•  Slide the screen up and touch <b>SAVE</b>.
\n•  A list of your Affirmations appears below the SAVE button.
\n•  You can update or delete the individual Affirmations with the icons to the right of the list.
\n•  Press SCHEDULE REMINDERS > at the bottom of screen to schedule [See Schedule Directions below]
\n•  If you UPDATE the wording of the Affirmation after it has been Scheduled, you must delete the Reminder and Re-Schedule.
\n•  Written Affirmations can be managed in SETTINGS: MANAGE AFFIRMATIONS / AFFIRMATION LIST\n

\n<b>AUDIO AFFIRMATIONS</b>\n
\n•  To record an audio reminder while in a Lesson, touch the microphone icon at the bottom left of the screen.
\n•  Press the <b>RECORD AFFIRMATION</b> button.
\n•  When the large microphone appears, touch the RED Start button, and record your Reminder.
\n•  Press the BLACK stop button to end the recording.
\n•  Your recording appears at the bottom of the screen along with any others you may have made.
\n•  You can Play or Delete the Affirmation Recordings with icons to the right of the list.
\n•  Press SCHEDULE REMINDERS > at the bottom of screen to schedule [See Schedule Directions below]
\n•  Audio Affirmations can be managed in SETTINGS: MANAGE AFFIRMATIONS / AFFIRMATIONS LIST\n

\n<b>SCHEDULING WRITTEN and/or RECORDED AFFIRMATION REMINDERS</b>\n
\n•  Affirmations can only be scheduled within the same day. Once the time on your device passes midnight, you can schedule the Affirmations for that new day, but not before.
\n•  Midnight time will look like this: 00:00 AM and Ten minutes after midnight will look like this: 00:10 AM
\n•  Press down-arrow for "Start Time" and slide HOUR Dial to time desired; Press MINUTES at top of screen [if they are not already highlighted.] Slide MINUTE Dial to time desired. Tap AM or PM and then OK.
\n•  Press down-arrow for "Stop Time" and do the same as above.
\n•  Press down-arrow for "Repeat" and choose interval for repetition
\n•  Choose which Affirmation will follow this schedule by checking the box next to Written Affirmation List or Audio Affirmation List and then which Affirmation in the list.
\n•  Scheduled Reminders can be managed in SETTINGS: MANAGE REMINDERS/VIEW/EDIT/DELETE REMINDERS, although they will disappear once their "End time" is reached.
    \n◦ Press the Bell icon in the Reminder List to turn REMINDER Off for times when you do not want to be disturbed
    \n◦ Press the Pencil icon to Update the Reminder Start, Stop, and Repeat times.
    \n◦ Press Trash can to Delete Reminder [Affirmation is not deleted, only the Reminder]
    </string>
    <string name="user_guide_section2">There is also a <b>SEARCH</b> Function which will take you to the Course in Miracles Society [CIMS]
website <b>http://jcim.net</b> to search the On-Line Edition of the Course. The search results are better
viewed via Landscape. The screen can also be enlarged via the touch screen.</string>
    <string name="user_guide_section3">The Donation page shows a PayPal Button although you do not have to have PayPal Account. You can use any Debit or Credit card to make your Tax-Deductible Donation.\n
\n<b>Course in Miracles Society</b> has been blessed to have worked with <b>INFOICON TECHNOLOGIES</b> for the development of this APPLICATION. We are very grateful for all their
challenging work, expertise, and dedication to this project.</string>
    <string name="reminder_list_is_empty">Reminder list is empty.</string>
    <string name="tax">Tax-Deductible Donation</string>
    <string name="txtCredits">http://www.jcim.net/donations/</string>
    <string name="setting_body_part_2">Also, by means of your will or other estate plan, you can name Course in Miracles Society\nas the beneficiary of a portion of your estate, or of particular assets in your estate. In this way, you are honoring your loved ones while also providing critical support to the extension of LOVE.</string>
    <string name="setting_body_part_1">Presently, all CIMS projects are supported by free will gifts of time, talent, and money. If you would like to support any of the activities of the Society in any way, please do not hesitate to get in touch. Because of the international character of CIMS, the internet is our primary means of communicating and collaborating.\nTo make a tax-deductible donation in support of Course In Miracles Society, please go here:.</string>
</resources>