<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/white"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">


        <com.infoicon.acim.utils.customviews.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/write_an_affirmation"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/default_text_size"
            android:textStyle="bold" />

        <com.infoicon.acim.utils.customviews.CustomEditText
            android:id="@+id/editTextAffirmation"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_edittext"
            android:gravity="top"
            android:hint="@string/write_an_affirmation"
            android:paddingBottom="15dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="15dp"
            android:scrollbars="vertical" />

        <com.infoicon.acim.utils.customviews.CustomButton
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_blue_btn"
            android:text="@string/save"
            android:textColor="@color/white" />

        <com.infoicon.acim.utils.customviews.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/record_and_audio_affirmation"
            android:textColor="@color/black"
            android:textSize="@dimen/default_text_size"
            android:textStyle="bold" />


        <com.infoicon.acim.utils.customviews.CustomButton
            android:id="@+id/btnManageAudio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_white_rectangle_btn"
            android:text="@string/record_affirmation" />



        <android.support.v7.widget.RecyclerView
            android:id="@+id/affirmationList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:scrollbars="none" />

        <com.infoicon.acim.utils.customviews.CustomButton
            android:id="@+id/btnManageReminders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:text="@string/schedule_reminders" />

    </LinearLayout>


</android.support.v4.widget.NestedScrollView>