<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">

        <com.infoicon.acim.utils.customviews.CustomEditText
            android:id="@+id/editTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_edittext"
            android:hint="@string/add_note_title"
            android:paddingBottom="15dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="15dp"
            android:scrollbars="none"
            android:imeOptions="actionNext"
            android:nextFocusForward="@+id/editTextDesc"/>

        <com.infoicon.acim.utils.customviews.CustomEditText
            android:id="@+id/editTextDesc"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_edittext"
            android:gravity="top"
            android:hint="@string/add_note_description"
            android:paddingBottom="15dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="15dp"
            android:imeActionLabel="@string/save"
            android:scrollbars="vertical"
           />

        <com.infoicon.acim.utils.customviews.CustomButton
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_blue_btn"
            android:text="@string/save"
            android:textColor="@color/white" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/notesList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:scrollbars="none" />


</LinearLayout>
</android.support.v4.widget.NestedScrollView>