<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:id="@+id/linear2"
            android:background="@color/white"
            android:layout_height="wrap_content">



            <include
                android:id="@+id/toolbar"
                layout="@layout/layout_toolbar" />


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <com.infoicon.acim.utils.customviews.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_margin="10dp"
                    android:textSize="18sp"
                    android:id="@+id/title"
                    android:textStyle="bold"
                    android:textColor="#329da8"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="COURSE IN MIRACLES SOCIETY \n non-profit"
                    android:layout_height="wrap_content" />

                <com.infoicon.acim.utils.customviews.CustomTextView
                    android:layout_width="match_parent"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:id="@+id/subtitle"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:padding="5dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="@string/tax"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
                <com.infoicon.acim.utils.CustomScrollView
                    android:layout_width="match_parent"
                    android:layout_below="@+id/linear2"
                    android:layout_marginTop="10dp"
                    android:fillViewport="true"
                    android:id="@+id/customscrollview"
                    android:layout_above="@+id/bottom_view"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:padding="10dp"
                        android:layout_height="wrap_content">


                <com.infoicon.acim.utils.customviews.CustomTextView
                    android:layout_width="match_parent"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:id="@+id/bodypart1"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:padding="5dp"
                    android:text="@string/setting_body_part_1"
                    android:layout_height="wrap_content" />

                <com.infoicon.acim.utils.customviews.CustomTextView
                    android:layout_width="wrap_content"
                    android:textColor="@color/dark_blue"
                    android:textSize="16sp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:padding="5dp"
                    android:id="@+id/link"
                    android:autoLink="web"
                    android:text="@string/txtCredits"
                    android:layout_height="wrap_content" />

                <com.infoicon.acim.utils.customviews.CustomTextView
                    android:layout_width="match_parent"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:id="@+id/bodypart2"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:padding="5dp"
                    android:text="@string/setting_body_part_2"
                    android:layout_height="wrap_content" />
                    </LinearLayout>
                </com.infoicon.acim.utils.CustomScrollView>






    <LinearLayout
        android:id="@+id/bottom_view"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/music_btn_background"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/decrease"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:src="@drawable/decrease_button_selector" />


        <ImageView
            android:id="@+id/increase"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginLeft="20dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:src="@drawable/increase_button_selector" />
    </LinearLayout>
</RelativeLayout>
